--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
   <p>&copy; 2024 My Portfolio</p>
 </footer>
 
+<!-- Scroll to Top Button -->
+<button class="btn btn-primary btn-floating" id="btnScrollToTop"><i class="fas fa-arrow-up"></i></button>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
