--- a/index.html
+++ b/index.html
@@ -33,19 +33,25 @@
 
 <!-- Hero Section -->
 <section id="hero" class="text-white text-center py-5 bg-blueviolet">
-  <div class="container">
-    <h1 class="display-3 mb-4">Welcome to My Portfolio</h1>
-    <p class="lead">Explore my projects and get in touch!</p>
-  </div>
-</section>
+    <div class="container">
+      <h1 class="display-3 mb-4 animated-text">Welcome to My Portfolio</h1> <br>
+      <p class="lead animated-text">Explore my projects and get in touch!</p>
+      <div class="scrolling-text">
+        <marquee behavior="scroll" direction="left" scrollamount="6">
+          This is a scrolling text to engage users!
+        </marquee>
+      </div>
+    </div>
+  </section>
 
 <!-- About Section -->
-<section id="about" class="py-5 text-center text-white bg-dark">
-  <div class="container">
-    <h2 class="mb-4">About Me</h2>
-    <p class="lead">I'm a passionate web developer who loves creating innovative and visually stunning websites.</p>
-  </div>
-</section>
+<section id="about" class="py-5 text-center text-white bg-dark position-relative">
+    <div class="container">
+      <h2 class="mb-4">About Me</h2>
+      <p class="lead">I'm a passionate web developer who loves creating innovative and visually stunning websites.</p>
+    </div>
+    <div class="fluid-box"></div> <!-- Add a container for the 3D box -->
+  </section>
 
 <!-- Projects Section -->
 <section id="projects" class="py-5">
