updated color scheme

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg ">
   <a class="navbar-brand" href="#"><i class="fas fa-laptop-code"></i> My Portfolio</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -41,18 +41,37 @@
           This is a scrolling text to engage users!
         </marquee>
       </div>
+      <!-- floating -->
+      <div class="cube">
+        <div class="side front">
+          <span>Front</span>
+        </div>
+        <div class="side back">
+          <span>Back</span>
+        </div>
+        <div class="side top">
+          <span>Top</span>
+        </div>
+        <div class="side bottom">
+          <span>Bottom</span>
+        </div>
+        <div class="side left">
+          <span>Left</span>
+        </div>
+        <div class="side right">
+          <span>Right</span>
+        </div>
+      <!--floatig-->
     </div>
   </section>
 
 <!-- About Section -->
-<section id="about" class="py-5 text-center text-white bg-dark position-relative">
+<section id="about" class="py-5 text-center text-white  position-relative">
     <div class="container">
       <h2 class="mb-4">About Me</h2>
       <p class="lead">I'm a passionate web developer who loves creating innovative and visually stunning websites.</p>
     </div>
-    <div class="fluid-box"></div> <!-- Add a container for the 3D box -->
   </section>
-
 <!-- Projects Section -->
 <section id="projects" class="py-5">
   <div class="container">
@@ -82,11 +101,13 @@
 </section>
 
 <!-- Contact Section -->
-<section id="contact" class="py-5 text-center text-dark bg-light">
+<section id="contact" class="py-5 text-center">
   <div class="container">
     <h2 class="mb-4">Contact Me</h2>
     <p class="lead">Feel free to reach out to me for any inquiries or collaborations!</p>
-    <p>Email: example@example.com</p>
+    <p>cliffordmukosh@gmail.com</p>
+    <p>linkdin</p>
+    
   </div>
 </section>
 
