--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg ">
-  <a class="navbar-brand" href="#"><i class="fas fa-laptop-code"></i> My Portfolio</a>
+  <a class="navbar-brand" href="#"><i class="fas fa-laptop-code"></i>clifford mukosh</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#about"><i class="fas fa-user"></i> About</a>
+        <a class="nav-link" href="#about"><i class="fas fa-user"></i> About clifford</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#projects"><i class="fas fa-laptop-code"></i> Projects</a>
@@ -68,7 +68,7 @@
 <!-- About Section -->
 <section id="about" class="py-5 text-center text-white  position-relative">
     <div class="container">
-      <h2 class="mb-4">About Me</h2>
+      <h2 class="mb-4">About clifford</h2>
       <p class="lead">I'm a passionate web developer who loves creating innovative and visually stunning websites.</p>
     </div>
   </section>
@@ -81,8 +81,8 @@
         <div class="card">
           <img src="project1.jpg" class="card-img-top" alt="Project 1">
           <div class="card-body">
-            <h5 class="card-title">Project 1</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h5 class="card-title">Library manament system using Flask python based framework</h5>
+            <p class="card-text">A system that managed books in the libary i used python based framework.</p>
           </div>
         </div>
       </div>
@@ -90,8 +90,10 @@
         <div class="card">
           <img src="project2.jpg" class="card-img-top" alt="Project 2">
           <div class="card-body">
-            <h5 class="card-title">Project 2</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h5 class="card-title">Telegram chatbot</h5>
+            <p class="card-text">II used teleram api to create a chatbot that allowed lecturers to communicate with students
+                it was a solution to briadcasting message and it formed and apealing intetface wich attracts users 
+            </p>
           </div>
         </div>
       </div>
