changed the text

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <p class="lead animated-text">Explore my projects and get in touch!</p>
       <div class="scrolling-text">
         <marquee behavior="scroll" direction="left" scrollamount="6">
-          This is a scrolling text to engage users!
+          Experienced in Python programming framework Django and Flask, PHP, and javascript backend using node js 
         </marquee>
       </div>
       <!-- floating -->
