--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <!-- Hero Section -->
 <section id="hero" class="text-white text-center py-5 bg-blueviolet">
     <div class="container">
-      <h1 class="display-3 mb-4 animated-text">Welcome Clifford's My Portfolio</h1> <br>
+      <h1 class="display-3 mb-4 animated-text">Welcome Clifford's Portfolio</h1> <br>
       <p class="lead animated-text">Explore my projects and get in touch!</p>
       <div class="scrolling-text">
         <marquee behavior="scroll" direction="left" scrollamount="6">
