--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a class="nav-link" href="#projects"><i class="fas fa-laptop-code"></i> Projects</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#contact"><i class="fas fa-envelope"></i> Contact</a>
+        <a class="nav-link" href="contacts.html"><i class="fas fa-envelope"></i> Contact</a>
       </li>
     </ul>
   </div>
