--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
         <a class="nav-link" href="#projects"><i class="fas fa-laptop-code"></i> Projects</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contacts.html"><i class="fas fa-envelope"></i> Contact</a>
+        <a class="nav-link" href="#contacts"><i class="fas fa-envelope"></i> Contact</a>
       </li>
     </ul>
   </div>
@@ -124,6 +124,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="script.js"></script>
+<script src="/static/script.js"></script>
 </body>
 </html>
