--- a/index.html
+++ b/index.html
@@ -91,13 +91,31 @@
           <img src="project2.jpg" class="card-img-top" alt="Project 2">
           <div class="card-body">
             <h5 class="card-title">Telegram chatbot</h5>
-            <p class="card-text">II used teleram api to create a chatbot that allowed lecturers to communicate with students
+            <p class="card-text">I used teleram api to create a chatbot that allowed lecturers to communicate with students
                 it was a solution to briadcasting message and it formed and apealing intetface wich attracts users 
             </p>
           </div>
         </div>
       </div>
-      <!-- Add more project cards as needed -->
+      <!-- next project -->
+       
+      <section id="projects" class="py-5">
+        <div class="container">
+          <h2 class="text-center text-dark mb-4">Projects</h2>
+          <div class="row">
+            <div class="col-lg-4 mb-4">
+              <div class="card">
+                <img src="project1.jpg" class="card-img-top" alt="Project 1">
+                <div class="card-body">
+                  <h5 class="card-title">Library manament system using Flask python based framework</h5>
+                  <p class="card-text">A system that managed books in the libary i used python based framework.</p>
+                </div>
+              </div>
+            </div>
+
+
+       <!-- next project -->
+
     </div>
   </div>
 </section>
