--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
@@ -98,24 +98,9 @@
         </div>
       </div>
       <!-- next project -->
-       
-      <section id="projects" class="py-5">
-        <div class="container">
-          <h2 class="text-center text-dark mb-4">Projects</h2>
-          <div class="row">
-            <div class="col-lg-4 mb-4">
-              <div class="card">
-                <img src="project1.jpg" class="card-img-top" alt="Project 1">
-                <div class="card-body">
-                  <h5 class="card-title">Library manament system using Flask python based framework</h5>
-                  <p class="card-text">A system that managed books in the libary i used python based framework.</p>
-                </div>
-              </div>
-            </div>
 
 
-       <!-- next project -->
-
+      
     </div>
   </div>
 </section>
@@ -142,6 +127,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="/static/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
