--- a/index.html
+++ b/index.html
@@ -38,31 +38,9 @@
       <p class="lead animated-text">Explore my projects and get in touch!</p>
       <div class="scrolling-text">
         <marquee behavior="scroll" direction="left" scrollamount="6">
-          Experienced in Python programming framework Django and Flask, PHP, and javascript backend using node js 
+          Experienced in Python programming framework Django and Flask, PHP, and javascript framework React js and vue js..
         </marquee>
       </div>
-      <!-- floating -->
-      <div class="cube">
-        <div class="side front">
-          <span>Front</span>
-        </div>
-        <div class="side back">
-          <span>Back</span>
-        </div>
-        <div class="side top">
-          <span>Top</span>
-        </div>
-        <div class="side bottom">
-          <span>Bottom</span>
-        </div>
-        <div class="side left">
-          <span>Left</span>
-        </div>
-        <div class="side right">
-          <span>Right</span>
-        </div>
-      <!--floatig-->
-    </div>
   </section>
 
 <!-- About Section -->
@@ -79,26 +57,40 @@
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card">
-          <img src="project1.jpg" class="card-img-top" alt="Project 1">
+          <img src="./static/project1.png" class="card-img-top" alt="Project 1">
           <div class="card-body">
-            <h5 class="card-title">Library manament system using Flask python based framework</h5>
-            <p class="card-text">A system that managed books in the libary i used python based framework.</p>
+            <h5 class="card-title">Ecommerce apllication UI</h5>
+            <p class="card-text">I worked on an ecoomerce web application UI created the login and 
+              the landing page used boostrap and tailwind css.</p>
           </div>
         </div>
       </div>
+
       <div class="col-lg-4 mb-4">
         <div class="card">
-          <img src="project2.jpg" class="card-img-top" alt="Project 2">
+          <img src="../portfolio/static/start_page.png" class="card-img-top" alt="Project 2">
           <div class="card-body">
-            <h5 class="card-title">Telegram chatbot</h5>
-            <p class="card-text">I used teleram api to create a chatbot that allowed lecturers to communicate with students
-                it was a solution to briadcasting message and it formed and apealing intetface wich attracts users 
+            <h5 class="card-title">Telegram course update bot</h5>
+            <p class="card-text">I used the Telegram API to create a chatbot that allowed lecturers 
+              to communicate with students. 
+              It was a solution for broadcasting messages and it formed 
+              an appealing interface which attracts users.
             </p>
           </div>
         </div>
       </div>
       <!-- next project -->
-
+      <div class="col-lg-4 mb-4">
+        <div class="card">
+          <img src="./static/WHTA.png" class="card-img-top" alt="Project 2">
+          <div class="card-body">
+            <h5 class="card-title">WHTA website</h5>
+            <p class="card-text">I worked on the UI design for the home section of the WHTA website I used React JavaScript. 
+              <a href="https://www.whtanetworks.com">Have a look </a>
+            </p>
+          </div>
+        </div>
+      </div>
 
       
     </div>
@@ -110,15 +102,28 @@
   <div class="container">
     <h2 class="mb-4">Contact Me</h2>
     <p class="lead">Feel free to reach out to me for any inquiries or collaborations!</p>
-    <p>cliffordmukosh@gmail.com</p>
-    <p>linkdin</p>
+    <p>
+      <a href="mailto:cliffordmukosh@gmail.com" style="color: rgb(159, 201, 43); font-size: 23px;">
+          <i class="fas fa-envelope email-icon"></i>cliffordmukosh@gmail.com
+      </a>
+  </p>
+  <p>
+      <a href="https://www.linkedin.com/in/clifford-mukosh-5234a7221" class="btn btn-success">
+          <i class="fab fa-linkedin"></i> LinkedIn
+      </a>
+  </p>
+  <p>
+      <a href="https://wa.me/0111920010" class="btn btn-info">
+          <i class="fab fa-whatsapp"></i> WhatsApp
+      </a>
+  </p>
     
   </div>
 </section>
 
 <!-- Footer -->
 <footer class="bg-dark text-white text-center py-3">
-  <p>&copy; 2024 My Portfolio</p>
+  <p>&copy; 2024 @clifford_Mukosh</p>
 </footer>
 
 <!-- Scroll to Top Button -->
