--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
   <div class="container">
     <h2 class="mb-4" id="typing-heading">About clifford</h2>
     <p class="lead" id="typing-text">I'm a passionate web developer who loves creating innovative and visually stunning websites.</p>
+    <p style="text-align: justify; font-size: 17px; font-weight: bold;">Proficient in Python programming with extensive experience in Django and Flask frameworks, 
+      as well as in PHP. Skilled in JavaScript frameworks
+       Ract.js and Vue.js, demonstrating a solid understanding of 
+      modern web development technologies.
+    </p>
   </div>
 </section>
 <!-- Projects Section -->
@@ -61,7 +66,7 @@
           <div class="card-body">
             <h5 class="card-title">Ecommerce apllication UI</h5>
             <p class="card-text">I worked on an ecoomerce web application UI created the login and 
-              the landing page used boostrap and tailwind css.</p>
+              the landing  page using Vue js.</p>
           </div>
         </div>
       </div>
