--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#about"><i class="fas fa-user"></i> About clifford</a>
+      <li class="nav-item ">
+        <a class="nav-link text-light" href="#about"><i class="fas fa-user"></i> About clifford</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#projects"><i class="fas fa-laptop-code"></i> Projects</a>
+        <a class="nav-link text-light" href="#projects"><i class="fas fa-laptop-code"></i> Projects</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#contact"><i class="fas fa-envelope"></i> Contact</a>
+        <a class="nav-link text-light" href="#contact"><i class="fas fa-envelope"></i> Contact</a>
       </li>
     </ul>
   </div>
@@ -97,7 +97,18 @@
         </div>
       </div>
 
-      
+      <div class="col-lg-4 mb-4">
+        <div class="card">
+          <img src="./static/WHTA.png" class="card-img-top" alt="Project 2">
+          <div class="card-body">
+            <h5 class="card-title"></h5>
+            <p class="card-text">I worked on the UI design for the home section of the WHTA website I used React JavaScript. 
+              <a href="https://www.whtanetworks.com">Have a look </a>
+            </p>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
