--- a/index.html
+++ b/index.html
@@ -99,11 +99,14 @@
 
       <div class="col-lg-4 mb-4">
         <div class="card">
-          <img src="./static/WHTA.png" class="card-img-top" alt="Project 2">
+          <img src="./static/Jumbofilmz.png" class="card-img-top" alt="Project 2">
           <div class="card-body">
             <h5 class="card-title"></h5>
-            <p class="card-text">I worked on the UI design for the home section of the WHTA website I used React JavaScript. 
-              <a href="https://www.whtanetworks.com">Have a look </a>
+            <p class="card-text">The Jumbo Filmz website is built using TypeScript,
+               a statically typed superset of JavaScript. The application functions as a
+                platform for unlimited movie and series streaming,
+               offering users access to the latest, best, and trending content across various genre
+              <a href="https://jumbo-filmz.vercel.app/">Have a look </a>
             </p>
           </div>
         </div>
