--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="card">
           <img src="./static/project1.png" class="card-img-top" alt="Project 1">
           <div class="card-body">
-            <h5 class="card-title">Ecommerce apllication UI</h5>
+            <h5 class="card-title">Ecommerce application UI</h5>
             <p class="card-text">I worked on an ecoomerce web application UI created the login and 
               the landing  page using Vue js.</p>
           </div>
