--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
+
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg  navbar-dark">
   <a class="navbar-brand" href="#"><i class="fas fa-laptop-code"></i>clifford mukosh</a>
@@ -29,8 +30,6 @@
     </ul>
   </div>
 </nav>
-<!-- Floating Theme Toggle Button -->
-<button class="btn btn-light btn-floating" id="themeToggleBtn"><i class="fas fa-adjust"></i></button>
 
 <!-- Hero Section -->
 <section id="hero" class="text-white text-center py-5 bg-blueviolet">
@@ -59,7 +58,7 @@
 <!-- Projects Section -->
 <section id="projects" class="py-5">
   <div class="container">
-    <h2 class="text-center  mb-4">Projects</h2>
+    <h2 class="text-center text-white mb-4">Projects</h2>
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card">
@@ -146,7 +145,7 @@
 </footer>
 
 <!-- Scroll to Top Button -->
-<button class="btn btn-primary btn-floating" id="btnScrollToTop1"><i class="fas fa-arrow-up"></i></button>
+<button class="btn btn-primary btn-floating" id="btnScrollToTop"><i class="fas fa-arrow-up"></i></button>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
