--- a/index.html
+++ b/index.html
@@ -65,8 +65,13 @@
           <img src="./static/project1.png" class="card-img-top" alt="Project 1">
           <div class="card-body">
             <h5 class="card-title">e-commerce application UI</h5>
-            <p class="card-text">I worked on an ecoomerce web application UI created the login and 
-              the landing  page using Vue js.</p>
+            <p class="card-text">
+              <P style="color: rgb(23, 119, 230); font-size: 18PX;">Technologies <B> MySQL Database ,PHP Backend, Vue JavaScript, jsx </B> :</P> 
+              I worked on an ecoomerce web application UI created the login and 
+              the landing  page using Vue js.
+            <p>
+              I used PHP for creating the backend and use MySQL Database 
+            </p></p>
           </div>
         </div>
       </div>
@@ -76,7 +81,9 @@
           <img src="../portfolio/static/start_page.png" class="card-img-top" alt="Project 2">
           <div class="card-body">
             <h5 class="card-title">Telegram course update bot</h5>
-            <p class="card-text">I used the Telegram API to create a chatbot that allowed lecturers 
+            <p class="card-text">
+              <P style="color: rgb(23, 119, 230); font-size: 18PX;">Technologies <b>MySQL, APIs , Flask , HTML5 , CSS , JavaScript</b> :</P> 
+              I used the Telegram API to create a chatbot that allowed lecturers 
               to communicate with students. 
               It was a solution for broadcasting messages and it formed 
               an appealing interface which attracts users.
@@ -90,7 +97,8 @@
           <img src="./static/WHTA.png" class="card-img-top" alt="Project 2">
           <div class="card-body">
             <h5 class="card-title">WHTA website</h5>
-            <p class="card-text">I worked on the UI design for the home section of the WHTA website I used React JavaScript. 
+            <p class="card-text">
+              <P style="color: rgb(23, 119, 230); font-size: 18PX;">Technologies <b>React javascript, Jsx</b> :</P> I worked on the UI design for the home section of the WHTA website I used React JavaScript. 
               <a href="https://www.whtanetworks.com">Have a look </a>
             </p>
           </div>
@@ -102,11 +110,40 @@
           <img src="./static/Jumbofilmz.png" class="card-img-top" alt="Project 2">
           <div class="card-body">
             <h5 class="card-title"></h5>
-            <p class="card-text">The Jumbo Filmz website is built using TypeScript,
+            <p class="card-text">
+              <P style="color: rgb(23, 119, 230); font-size: 18PX;">Technologies  <b>TypeScript</b> <b>javascript</b> <b>Jquery</b> :</P> 
+              The Jumbo Filmz website is built using TypeScript,
                a statically typed superset of JavaScript. The application functions as a
                 platform for unlimited movie and series streaming,
                offering users access to the latest, best, and trending content across various genre
               <a href="https://jumbo-filmz.vercel.app/">Have a look </a>
+            </p>
+          </div>
+        </div>
+      </div>
+      
+      <div class="col-lg-4 mb-4">
+        <div class="card">
+          <img src="./static/Pharmacy-Inventory-System.PNG" class="card-img-top" alt="Project 4">
+          <div class="card-body">
+            <h5 class="card-title"></h5>
+            <p class="card-text">
+             <P style="color: rgb(23, 119, 230); font-size: 18PX;">Technologies  <b>PHP</b> <b>MYSQL</b>  <b>javascript</b> <b>Jquery</b> :</P> 
+              The Medical Records Management System is a
+              web-based application designed to assist medical 
+              facilities in managing patient records and keeping track of 
+              their medicine inventor.This system provides a user-friendly
+              interface to efficiently handle essential tasks for medical
+              staff, administrators, and pharmacists.
+              Features
+              Patient Records Management
+              Create, update, and delete patient records.
+              Store comprehensive patient information, including personal details, 
+              medical history, and appointment schedules.
+              Easily search and retrieve patient records.
+              Assign unique identifiers to patients for easy tracking.
+              Medicine Inventory
+              <a href="https://github.com/Clifford537/Pharmacy-Inventory-System">Have a look </a>
             </p>
           </div>
         </div>
