--- a/index.html
+++ b/index.html
@@ -48,10 +48,16 @@
   <div class="container">
     <h2 class="mb-4" id="typing-heading">About clifford</h2>
     <p class="lead" id="typing-text">I'm a passionate web developer who loves creating innovative and visually stunning websites.</p>
-    <p style="text-align: justify; font-size: 17px; font-weight: bold;">Proficient in Python programming with extensive experience in Django and Flask frameworks, 
-      as well as in PHP. Skilled in JavaScript frameworks
-       Ract.js and Vue.js, demonstrating a solid understanding of 
-      modern web development technologies.
+    <p style="text-align: justify; font-size: 17px; font-weight: bold;">
+      Experienced in utilizing a wide range of web development technologies, 
+      Content Management Systems (CMS) WordPress, Joomla, 
+      and Drupal; website builders  Wix and Squarespace; static site
+      generators like Jekyll, Hugo, and Gatsby; and headless CMS platforms
+      including Contentful, Strapi, and Sanity. Additionally, proficient 
+      in modern web development frameworks like React (with Next.js),
+      Vue.js (with Nuxt.js), and Angular, as well as backend technologies
+      including Django, PHP, Flask, 
+      and Node.js, to build responsive, user-friendly, and scalable websites and applications."
     </p>
   </div>
 </section>
