--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       Experienced in web development technologies, 
       Content Management Systems (CMS) WordPress, Joomla, 
       and Drupal; website builders Wix and Squarespace; static site
-      generators like Jekyll, Hugo, and Gatsby; and headless CMS platforms
-      including Contentful, Strapi, and Sanity. Additionally, proficient 
+      generators Jekyll, Hugo, and Gatsby; and headless CMS platforms
+      Contentful, Strapi, and Sanity. Additionally, proficient 
       in modern web development frameworks React (with Next.js),
       Vue.js (with Nuxt.js), and Angular, as well as backend technologies
-      including Django, PHP, Flask, 
+      including Django, PHP, Flask, Laravel,
       and Node.js, to build responsive, user-friendly, and scalable websites and applications.
       <br><br>
       I have successfully completed <b id="clientProjects" style="color:rgb(216, 230, 23); font-size: 20px;">0</b> 
