--- a/index.html
+++ b/index.html
@@ -46,25 +46,23 @@
 <!-- About Section -->
 <section id="about" class="py-5 text-center text-white position-relative">
   <div class="container">
-    <h2 class="mb-4" id="typing-heading">About clifford</h2>
-    <p class="lead" id="typing-text">I'm a passionate web developer who loves creating innovative and visually stunning websites.</p>
+    <h2 class="mb-4" id="typing-heading">About Clifford</h2>
+    <p class="lead" id="typing-text">I'm a passionate Front-End Developer with a drive for creating innovative, user-focused web solutions.</p>
     <p style="text-align: justify; font-size: 17px; font-weight: bold;">
-      Experienced in web development technologies, 
-      Content Management Systems (CMS) WordPress, Joomla, 
-      and Drupal; website builders Wix and Squarespace; static site
-      generators Jekyll, Hugo, and Gatsby; and headless CMS platforms
-      Contentful, Strapi, and Sanity. Additionally, proficient 
-      in modern web development frameworks React (with Next.js),
-      Vue.js (with Nuxt.js), and Angular, as well as backend technologies
-      including Django, PHP, Flask, Laravel,
-      and Node.js, to build responsive, user-friendly, and scalable websites and applications.
-      <br><br>
-      I have successfully completed <b id="clientProjects" style="color:rgb(216, 230, 23); font-size: 20px;">0</b> 
-      Website Projects for different Clients, and I have done <b id="personalProjects" style="color:rgb(216, 230, 23); font-size: 20px;">10</b> 
-      Personal Web Projects.
+      With expertise in modern web technologies, I specialize in:  
+      - **Front-End Frameworks and Libraries:** React (with Next.js), Vue.js (with Nuxt.js), Angular.  
+      - **State Management Tools:** Redux, Zustand, and Context API for scalable application architecture.  
+      - **CSS Frameworks:** Tailwind CSS, Bootstrap, Material-UI for responsive design.  
+      - **Build Tools:** Webpack, Vite, and Parcel for efficient project workflows.  
+      - **Backend Technologies:** Node.js, Django, Flask, and Laravel.  
+      - **APIs:** RESTful APIs and GraphQL for seamless integration.
+
+      I have a proven track record of delivering <b id="clientProjects" style="color:rgb(216, 230, 23); font-size: 20px;">0</b> client projects and completing <b id="personalProjects" style="color:rgb(216, 230, 23); font-size: 20px;">10</b> personal projects, showcasing my ability to build responsive, scalable, and user-friendly web applications.  
+      I am passionate about leveraging cutting-edge technologies to craft innovative solutions that exceed user expectations.
     </p>
   </div>
 </section>
+    
 <!-- Projects Section -->
 <section id="projects" class="py-5">
   <div class="container">
