--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
     <p class="lead" id="typing-text">I'm a passionate Front-End Developer with a drive for creating innovative, user-focused web solutions.</p>
     <p style="text-align: justify; font-size: 17px; font-weight: bold;">
       With expertise in modern web technologies, I specialize in:  
-      - **Front-End Frameworks and Libraries:** React (with Next.js), Vue.js (with Nuxt.js), Angular.  
-      - **State Management Tools:** Redux, Zustand, and Context API for scalable application architecture.  
-      - **CSS Frameworks:** Tailwind CSS, Bootstrap, Material-UI for responsive design.  
-      - **Build Tools:** Webpack, Vite, and Parcel for efficient project workflows.  
-      - **Backend Technologies:** Node.js, Django, Flask, and Laravel.  
-      - **APIs:** RESTful APIs and GraphQL for seamless integration.
+      <b>Front-End Frameworks and Libraries:</b> React (with Next.js), Vue.js (with Nuxt.js), Angular.  
+      <b>State Management Tools:</b> Redux, Zustand, and Context API for scalable application architecture.  
+      <b>CSS Frameworks:</b> Tailwind CSS, Bootstrap, Material-UI for responsive design.  
+      <b>Build Tools:</b> Webpack, Vite, and Parcel for efficient project workflows.  
+      <b>Backend Technologies:</b> Node.js, Django, Flask, and Laravel.  
+      <b>APIs:</b> RESTful APIs and GraphQL for seamless integration.
 
       I have a proven track record of delivering <b id="clientProjects" style="color:rgb(216, 230, 23); font-size: 20px;">0</b> client projects and completing <b id="personalProjects" style="color:rgb(216, 230, 23); font-size: 20px;">10</b> personal projects, showcasing my ability to build responsive, scalable, and user-friendly web applications.  
       I am passionate about leveraging cutting-edge technologies to craft innovative solutions that exceed user expectations.
