--- a/index.html
+++ b/index.html
@@ -47,21 +47,22 @@
 <section id="about" class="py-5 text-center text-white position-relative">
   <div class="container">
     <h2 class="mb-4" id="typing-heading">About Clifford</h2>
-    <p class="lead" id="typing-text">I'm a passionate Front-End Developer with a drive for creating innovative, user-focused web solutions.</p>
+    <p class="lead" id="typing-text">I'm a passionate Front-End Developer eager to contribute to impactful technological solutions in food systems.</p>
     <p style="text-align: justify; font-size: 17px; font-weight: bold;">
-      With expertise in modern web technologies, I specialize in:  
-      <b>Front-End Frameworks and Libraries:</b> React (with Next.js), Vue.js (with Nuxt.js), Angular.  
-      <b>State Management Tools:</b> Redux, Zustand, and Context API for scalable application architecture.  
-      <b>CSS Frameworks:</b> Tailwind CSS, Bootstrap, Material-UI for responsive design.  
-      <b>Build Tools:</b> Webpack, Vite, and Parcel for efficient project workflows.  
-      <b>Backend Technologies:</b> Node.js, Django, Flask, and Laravel.  
-      <b>APIs:</b> RESTful APIs and GraphQL for seamless integration.
+      With hands-on experience in modern web development, I specialize in:  
+      <b>Front-End Frameworks:</b> React.js (with Next.js), Vue.js, Angular.  
+      <b>Back-End Technologies:</b> Node.js, Express.js, Django, Flask.  
+      <b>Database Systems:</b> MongoDB, PostgreSQL, MySQL.  
+      <b>APIs:</b> RESTful APIs and GraphQL for seamless integration.  
+      <b>Version Control:</b> Git and GitHub for collaborative development.  
+      <b>CSS Frameworks:</b> Tailwind CSS, Bootstrap, Material-UI for modern and responsive design.  
 
-      I have a proven track record of delivering <b id="clientProjects" style="color:rgb(216, 230, 23); font-size: 20px;">0</b> client projects and completing <b id="personalProjects" style="color:rgb(216, 230, 23); font-size: 20px;">10</b> personal projects, showcasing my ability to build responsive, scalable, and user-friendly web applications.  
-      I am passionate about leveraging cutting-edge technologies to craft innovative solutions that exceed user expectations.
+      I have completed <b id="clientProjects" style="color:rgb(216, 230, 23); font-size: 20px;">0</b> client projects and <b id="personalProjects" style="color:rgb(216, 230, 23); font-size: 20px;">10</b> personal web projects. My goal is to contribute to meaningful solutions leveraging React.js and Node.js to create impactful applications.  
     </p>
   </div>
-</section>
+    </section>
+
+<!-- About Section -->
     
 <!-- Projects Section -->
 <section id="projects" class="py-5">
