--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <a class="nav-link text-light" href="#about"><i class="fas fa-user"></i> About Clifford</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link text-light" href="#experience"><i class="fas fa-briefcase"></i> Experience</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link text-light" href="#projects"><i class="fas fa-laptop-code"></i> Projects</a>
       </li>
       <li class="nav-item">
@@ -61,6 +64,51 @@
   </div>
 </section>
 
+<!-- Experience Section -->
+<section id="experience" class="py-5 text-white">
+  <div class="container">
+    <h2 class="text-center mb-4">Experience</h2>
+    <div class="row">
+      <div class="col-lg-12 mb-4">
+        <div class="card bg-dark text-white">
+          <div class="card-body">
+            <h5 class="card-title">Backend Developer (Contract) – CPIMS</h5>
+            <p class="card-text"><b>September 2024</b></p>
+            <p>
+              Integrated the Integrated Population System into the Child Protection Management Information System using <b>Django</b> and <b>Django REST Framework</b>.
+              Implemented <b>Google OAuth</b> for secure authentication and optimized API performance, reducing response time by 20%.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-12 mb-4">
+        <div class="card bg-dark text-white">
+          <div class="card-body">
+            <h5 class="card-title">Full Stack Developer – Learnsoft Beliotech Solutions</h5>
+            <p class="card-text"><b>May 2023 – August 2023</b></p>
+            <p>
+              Developed web applications using <b>Django</b>, <b>React</b> with <b>Redux</b>, and <b>Laravel</b>, integrating <b>M-Pesa</b> and <b>PayPal</b> for secure payments.
+              Utilized <b>Celery</b> for asynchronous task processing, enhancing application scalability for high-volume transactions.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-12 mb-4">
+        <div class="card bg-dark text-white">
+          <div class="card-body">
+            <h5 class="card-title">Backend Development Intern – WHTA Network</h5>
+            <p class="card-text"><b>January 2023 – May 2023</b></p>
+            <p>
+              Built microservices and APIs using <b>Django REST Framework</b> and implemented real-time chat with <b>Django Channels</b> and <b>WebSocket Consumers</b>.
+              Configured <b>MySQL</b> databases and integrated <b>Google OAuth</b>, completing two full-cycle projects.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- Projects Section -->
 <section id="projects" class="py-5">
   <div class="container">
@@ -75,35 +123,34 @@
               <p style="color: rgb(23, 119, 230); font-size: 18px;">Technologies: <b>Django, Django REST Framework, Celery, MySQL, React, Redux, M-Pesa, Stripe</b></p>
               Developed a scalable e-commerce platform with secure payment processing using M-Pesa and Stripe, handling 500+ daily transactions.
               Used Django and Celery for asynchronous order processing, reducing checkout time by 25%. Built a responsive frontend with React and Redux for seamless user experience.
-              <a href="https://github.com/Clifford537/Ecommerce-Platform" target="_blank">View on GitHub</a>
+              
             </p>
           </div>
         </div>
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card">
-          <img src="./static/jobplatform.png" class="card-img-top" alt="Job connection platform screenshot">
+          <img src="./static/medicalrecords.png" class="card-img-top" alt="Medical Records Management System screenshot">
           <div class="card-body">
-            <h5 class="card-title">Job Connection Platform</h5>
+            <h5 class="card-title">Medical Records Management System</h5>
             <p class="card-text">
-              <p style="color: rgb(23, 119, 230); font-size: 18px;">Technologies: <b>Django, Django REST Framework, Django Channels, WebSocket, React, Vite, Google OAuth</b></p>
-              Built a microservices-based platform for job seekers and employers with real-time chat using Django Channels and WebSocket Consumers.
-              Integrated Google OAuth for secure authentication and developed a Vite-powered React frontend, improving user engagement by 30%.
-              <a href="https://github.com/Clifford537/Job-Connection-Platform" target="_blank">View on GitHub</a>
+              <p style="color: rgb(23, 119, 230); font-size: 18px;">Technologies: <b>PHP, MySQL, JavaScript, jQuery, Tailwind CSS</b></p>
+              Developed a web-based system to manage patient records and medicine inventory for medical facilities. Implemented features for creating, updating, and searching patient records with unique identifiers, and tracking inventory. Used PHP and MySQL for robust backend data management and Tailwind CSS for a responsive, user-friendly interface.
+              <a href="https://github.com/Clifford537/Pharmacy-Inventory-System" target="_blank">View on GitHub</a>
             </p>
           </div>
         </div>
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card">
-          <img src="./static/schoolcomm.png" class="card-img-top" alt="School communication system screenshot">
+          <img src="./static/chat.png" class="card-img-top" alt="School communication system screenshot">
           <div class="card-body">
             <h5 class="card-title">School Communication System</h5>
             <p class="card-text">
               <p style="color: rgb(23, 119, 230); font-size: 18px;">Technologies: <b>Flask, Celery, MySQL, React, Vite, Telegram API</b></p>
               Developed a real-time messaging system for lecturers and students using Flask and Telegram API integration.
               Utilized Celery for asynchronous message processing, supporting 1,000+ users, and built a responsive React frontend with Vite.
-              <a href="https://github.com/Clifford537/School-Communication-System" target="_blank">View on GitHub</a>
+              <a href="https://github.com/Clifford537/Course_update_bot.git" target="_blank">View on GitHub</a>
             </p>
           </div>
         </div>
