--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
             <h5 class="card-title">E-Commerce Platform</h5>
             <p class="card-text">
               <p style="color: rgb(23, 119, 230); font-size: 18px;">Technologies: <b>Django, Django REST Framework, Celery, MySQL, React, Redux, M-Pesa, Stripe</b></p>
-              Developed a scalable e-commerce platform with secure payment processing using M-Pesa and Stripe, handling 500+ daily transactions.
-              Used Django and Celery for asynchronous order processing, reducing checkout time by 25%. Built a responsive frontend with React and Redux for seamless user experience.
+              Developed a scalable e-commerce platform with secure payment processing using M-Pesa and Stripe, handling transactions.
+              Used Django and Celery for asynchronous order processing, reducing checkout time. Built a responsive frontend with React and Redux for seamless user experience.
               
             </p>
           </div>
